Fixed event info spacing when mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -60,6 +60,10 @@
     margin-bottom: 10px;
   }
 
+  .event-info-block{
+    line-height: 50px;
+  }
+
   .event-info{
     background-color: #5887ba;
     color: white;
